core/tests/integration/typecheck/fail/mismatch_array_multiple_entries.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'String'
# inferred = 'Number'
[1, 2, "3"] : Array String
